Enhance music button and add page navigation
Added click event to main container for page navigation.

--- a/01_opening.html
+++ b/01_opening.html
@@ -28,6 +28,8 @@
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
+      cursor: pointer;
+      /* 添加指针样式提示可点击 */
     }
 
     .overlay {
@@ -57,6 +59,8 @@
       width: 100%;
       height: auto;
       display: block;
+      cursor: pointer;
+      /* 保持按钮的可点击样式 */
     }
 
     .start-text {
@@ -91,7 +95,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container" id="mainContainer">
     <div class="overlay"></div>
     <div class="music-btn" id="musicButton">
       <img src="./picture/button/music.gif" alt="音乐按钮" id="musicIcon">
@@ -101,7 +105,10 @@
 
   <script>
     // 音乐按钮切换功能
-    document.getElementById('musicButton').addEventListener('click', function () {
+    document.getElementById('musicButton').addEventListener('click', function (event) {
+      // 阻止事件冒泡，防止触发页面跳转
+      event.stopPropagation();
+
       const musicIcon = document.getElementById('musicIcon');
       const currentSrc = musicIcon.getAttribute('src');
 
@@ -110,6 +117,12 @@
       } else {
         musicIcon.src = './picture/button/music.gif';
       }
+    });
+
+    // 添加页面点击跳转功能
+    document.getElementById('mainContainer').addEventListener('click', function () {
+      // 跳转到02_loading.html页面
+      window.location.href = '02_loading.html';
     });
   </script>
 </body>
