--- a/04_game_instr.html
+++ b/04_game_instr.html
@@ -28,6 +28,8 @@
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
+      cursor: pointer;
+      /* 添加指针样式提示可点击 */
     }
 
     .overlay {
@@ -154,7 +156,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container" id="mainContainer">
     <div class="overlay"></div>
 
     <div class="image-4">
@@ -182,7 +184,10 @@
 
   <script>
     // 音乐按钮切换功能
-    document.getElementById('musicButton').addEventListener('click', function () {
+    document.getElementById('musicButton').addEventListener('click', function (event) {
+      // 阻止事件冒泡，防止触发页面跳转
+      event.stopPropagation();
+
       const musicIcon = document.getElementById('musicIcon');
       const currentSrc = musicIcon.getAttribute('src');
 
@@ -191,6 +196,20 @@
       } else {
         musicIcon.src = './picture/button/music.gif';
       }
+    });
+
+    // 返回按钮功能 - 跳转到03_intro_2.html
+    document.getElementById('returnButton').addEventListener('click', function (event) {
+      // 阻止事件冒泡，防止触发页面跳转
+      event.stopPropagation();
+      // 跳转到03_intro_2.html页面
+      window.location.href = '03_intro_2.html';
+    });
+
+    // 添加页面点击跳转功能
+    document.getElementById('mainContainer').addEventListener('click', function () {
+      // 跳转到05_talking.html页面
+      window.location.href = '05_talking.html';
     });
   </script>
 </body>
