Implement envelope click navigation to next page
Added click event to envelope for navigation.

--- a/03_intro_1.html
+++ b/03_intro_1.html
@@ -117,7 +117,12 @@
         musicIcon.src = './picture/button/music.gif';
       }
     });
+
+    document.getElementById('envelope').addEventListener('click', function () {
+      window.location.href = '03_intro_2.html';
+    });
   </script>
 </body>
+
 
 </html>
